# rapidscada-admin

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
rapidscada_admin/: __init__.py  __main__.py  backup.py  basetable.py  cli.py  crypto.py  users.py  validation.py
tests/: __init__.py  test_backup.py  test_basetable.py  test_cli.py  test_crypto.py  test_users.py  test_validation.py
