[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rapidscada-admin"
version = "1.0.2"
description = "Linux CLI for administering Rapid SCADA BaseDAT configuration files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "rapidscada-admin contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
keywords = ["rapidscada", "scada", "basdat", "industrial", "admin"]

[project.urls]
Homepage = "https://github.com/Shadow21AR/rapidscada-admin"
Repository = "https://github.com/Shadow21AR/rapidscada-admin"
Issues = "https://github.com/Shadow21AR/rapidscada-admin/issues"

[project.scripts]
rapidscada-admin = "rapidscada_admin.cli:main"

[tool.setuptools.packages.find]
include = ["rapidscada_admin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
